--- a/Matchmaking.ipynb
+++ b/Matchmaking.ipynb
@@ -790,7 +790,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>arthur</td>\n",
+       "      <td>kaio</td>\n",
        "      <td>19</td>\n",
        "      <td>masculino</td>\n",
        "      <td>moba</td>\n",
@@ -800,163 +800,74 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>arthur</td>\n",
-       "      <td>19</td>\n",
+       "      <td>lucas</td>\n",
+       "      <td>24</td>\n",
        "      <td>masculino</td>\n",
        "      <td>moba</td>\n",
        "      <td>league of legends</td>\n",
        "      <td>prata</td>\n",
-       "      <td>top</td>\n",
+       "      <td>mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>junin</td>\n",
-       "      <td>18</td>\n",
+       "      <td>joão</td>\n",
+       "      <td>20</td>\n",
        "      <td>masculino</td>\n",
        "      <td>moba</td>\n",
        "      <td>league of legends</td>\n",
-       "      <td>ouro</td>\n",
+       "      <td>prata</td>\n",
        "      <td>mid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>toreba</td>\n",
-       "      <td>19</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>moba</td>\n",
-       "      <td>league of legends</td>\n",
-       "      <td>bronze</td>\n",
-       "      <td>adc</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Nome  Idade       Sexo Gênero de jogo      Jogo de busca Nível ranked  \\\n",
-       "0  arthur     19  masculino           moba  league of legends        prata   \n",
-       "1  arthur     19  masculino           moba  league of legends        prata   \n",
-       "2   junin     18  masculino           moba  league of legends         ouro   \n",
-       "3  toreba     19  masculino           moba  league of legends       bronze   \n",
-       "\n",
-       "  Função  \n",
-       "0    top  \n",
-       "1    top  \n",
-       "2    mid  \n",
-       "3    adc  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Match encontrado: toreba e arthur estão prontos para jogarem DUO! Se divirtam!\n",
-      "Match encontrado: toreba e arthur estão prontos para jogarem DUO! Se divirtam!\n",
-      "Você realizou seu cadastro com sucesso!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nome</th>\n",
-       "      <th>Idade</th>\n",
-       "      <th>Sexo</th>\n",
-       "      <th>Gênero de jogo</th>\n",
-       "      <th>Jogo de busca</th>\n",
-       "      <th>Nível ranked</th>\n",
-       "      <th>Função</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>arthur</td>\n",
-       "      <td>19</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>moba</td>\n",
-       "      <td>league of legends</td>\n",
-       "      <td>prata</td>\n",
-       "      <td>top</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>arthur</td>\n",
-       "      <td>19</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>moba</td>\n",
-       "      <td>league of legends</td>\n",
-       "      <td>prata</td>\n",
-       "      <td>top</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>junin</td>\n",
-       "      <td>18</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>moba</td>\n",
-       "      <td>league of legends</td>\n",
-       "      <td>ouro</td>\n",
-       "      <td>mid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>toreba</td>\n",
-       "      <td>19</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>moba</td>\n",
-       "      <td>league of legends</td>\n",
-       "      <td>bronze</td>\n",
-       "      <td>adc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>karen</td>\n",
-       "      <td>19</td>\n",
+       "      <td>laura</td>\n",
+       "      <td>20</td>\n",
        "      <td>feminino</td>\n",
        "      <td>moba</td>\n",
        "      <td>league of legends</td>\n",
-       "      <td>bronze</td>\n",
+       "      <td>prata</td>\n",
        "      <td>mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>francisco</td>\n",
+       "      <td>19</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>prata</td>\n",
+       "      <td>top</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>adriana</td>\n",
+       "      <td>22</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>moba</td>\n",
+       "      <td>league of legends</td>\n",
+       "      <td>prata</td>\n",
+       "      <td>top</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Nome  Idade       Sexo Gênero de jogo      Jogo de busca Nível ranked  \\\n",
-       "0  arthur     19  masculino           moba  league of legends        prata   \n",
-       "1  arthur     19  masculino           moba  league of legends        prata   \n",
-       "2   junin     18  masculino           moba  league of legends         ouro   \n",
-       "3  toreba     19  masculino           moba  league of legends       bronze   \n",
-       "4   karen     19   feminino           moba  league of legends       bronze   \n",
+       "        Nome  Idade       Sexo Gênero de jogo      Jogo de busca Nível ranked  \\\n",
+       "0      kaio      19  masculino           moba  league of legends        prata   \n",
+       "1      lucas     24  masculino           moba  league of legends        prata   \n",
+       "2       joão     20  masculino           moba  league of legends        prata   \n",
+       "3      laura     20   feminino           moba  league of legends        prata   \n",
+       "4  francisco     19  masculino           moba  league of legends        prata   \n",
+       "5    adriana     22   feminino           moba  league of legends        prata   \n",
        "\n",
        "  Função  \n",
        "0    top  \n",
-       "1    top  \n",
+       "1    mid  \n",
        "2    mid  \n",
-       "3    adc  \n",
-       "4    mid  "
+       "3    mid  \n",
+       "4    top  \n",
+       "5    top  "
       ]
      },
      "metadata": {},
@@ -966,8 +877,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Match encontrado: karen e arthur estão prontos para jogarem DUO! Se divirtam!\n",
-      "Match encontrado: karen e arthur estão prontos para jogarem DUO! Se divirtam!\n"
+      "Match encontrado: adriana e laura estão prontos para jogarem DUO! Se divirtam!\n"
      ]
     }
    ],
@@ -1092,7 +1002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
